--- a/bikenow-gateway/src/main/resources/application.properties
+++ b/bikenow-gateway/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=bikenow-gateway
+
+# Configurações do Spring Cloud Gateway
+spring.cloud.gateway.discovery.locator.enabled=true
+spring.cloud.gateway.discovery.locator.lower-case-service-id=true
+
+# Configurações do Eureka Client
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.instance.prefer-ip-address=true
