--- a/bikenow-discovery/src/main/resources/application.properties
+++ b/bikenow-discovery/src/main/resources/application.properties
@@ -4,12 +4,12 @@ server.port=8761
 
 eureka.instance.hostname=localhost
 
-# Configurações do cliente Eureka
+# Configuracoes do cliente Eureka
 eureka.client.enabled=true
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 eureka.client.service-url.defaultZone=http://${eureka.instance.hostname}:${server.port}/eureka/
 
-# Configurações do servidor Eureka
+# Configuracoes do servidor Eureka
 eureka.server.enable-self-preservation=false
 eureka.server.wait-time-in-ms-when-sync-empty=0
