--- a/bikenow-gateway/src/main/resources/application.properties
+++ b/bikenow-gateway/src/main/resources/application.properties
@@ -1,9 +1,15 @@
 spring.application.name=bikenow-gateway
+server.port=8080
 
-# Configurações do Spring Cloud Gateway
-spring.cloud.gateway.discovery.locator.enabled=true
-spring.cloud.gateway.discovery.locator.lower-case-service-id=true
+# URL do Eureka rodando no Railway
+eureka.client.service-url.defaultZone=http://bikenow-ecommerce-production.up.railway.app/eureka/
 
-# Configurações do Eureka Client
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
-eureka.instance.prefer-ip-address=true
+# Habilita o registro no Eureka
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+
+eureka.instance.hostname=localhost
+eureka.instance.app=BIKENOW-GATEWAY
+eureka.instance.dataCenterInfo.name=MyOwn
+
+eureka.client.tls.enabled:false
